<resources>
    <string name="app_name">Room</string>
    <string name="name_edit_text">Введите имя:</string>
    <string name="email_edit_text">Введите почту:</string>
    <string name="phone_edit_text">Введите номер телефона:</string>
    <string name="save_btn">Сохранить</string>
    <string name="show_all_users_btn">Вывести список</string>
    <string name="delete_all_users_btn">delete all users</string>
    <string name="delete_user_text_view">delete user</string>
    <string name="edit_name_text_view">edit fields</string>
    <string name="edit_email_text_view">edit email</string>
    <string name="edit_phone_text_view">edit phone</string>
    <string name="name_edit_txt">name</string>
    <string name="email_edit_txt">email</string>
    <string name="phone_edit_txt">phone</string>
    <string name="edit_saved_edit_txt">edit saved</string>
    <string name="save_txt_btn">Сохранить</string>
    <string name="user_id_txt_view">User id:</string>
    <string name="user_name_txt_view">User name:</string>
    <string name="e_mail_txt_view">e-mail:</string>
    <string name="phone_number_txt_view">Phone number</string>
    <string name="delete_txt_view">delete</string>
</resources>