<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nameEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name_edit_text"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="87dp" />

    <EditText
        android:id="@+id/emailEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/email_edit_text"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="182dp" />

    <EditText
        android:id="@+id/phoneEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/phone_edit_text"
        android:inputType="phone"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="283dp" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_txt_btn"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="396dp" />

    <Button
        android:id="@+id/showAllUserBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/show_all_users_btn" />
</LinearLayout>