<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_id_txt_view"
            android:textSize="@dimen/txt_size_header"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/user_name_txt_view"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/emailTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/e_mail_txt_view"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/phoneTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/phone_number_txt_view"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_size_header"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/deleteUser"
        android:layout_width="wrap_content"
        android:textColor="#D50000"
        android:layout_marginStart="36dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_txt_view" />

</LinearLayout>